# app-zcash-rust

./: .gitignore  .gitmodules  Cargo.toml  init_deps.sh  update_patches.sh
src/: log.rs  main.rs  parser.rs  settings.rs  utils.rs
src/app_ui/: address.rs  menu.rs
src/handlers/: get_public_key.rs  get_trusted_input.rs  sign_tx.rs
src/utils/: blake2b_256_pers.rs
tests/: requirements.txt  test_appname_cmd.py  test_error_cmd.py  test_pubkey_cmd.py  test_sign_cmd.py  test_trusted_input_cmd.py  test_version_cmd.py
tests/application_client/: zcash_command_sender.py  zcash_response_unpacker.py  zcash_transaction.py  zcash_utils.py
