[package]
name = "app-zcash-rust"
version = "0.0.1"
authors = ["Ledger"]
edition = "2021"

[dependencies]
ledger_device_sdk = "1.*"
include_gif = "1.*"
serde = { version="1.0.192", default-features = false, features = ["derive"] }
serde-json-core = { git = "https://github.com/rust-embedded-community/serde-json-core" }
hex = { version = "0.4.3", default-features = false, features = ["serde", "alloc"] }
numtoa = "0.2.4"

# librustzcash deps
orchard = { path = "./deps/orchard", default-features = false }
sapling = { package = "sapling-crypto", path = "./deps/sapling-crypto", default-features = false }
secp256k1 = { path = "./deps/rust-secp256k1", default-features = false }

# librustzcash packages
zcash_primitives = { path = "./deps/librustzcash/zcash_primitives", default-features = false }
zcash_transparent = { path = "./deps/librustzcash/zcash_transparent", default-features = false }
zcash_address = { path = "./deps/librustzcash/components/zcash_address", default-features = false }

[build-dependencies]
image = "0.25.7"

[patch.crates-io]
# Used in orchard
radium = { path = "./deps/radium" }
# Used in bip32 in librustzcash
secp256k1 = { path = "./deps/rust-secp256k1" }
# Used in librustzcash
orchard = { path = "./deps/orchard" }
sapling-crypto = { path = "./deps/sapling-crypto" }
# Used by multiple deps
spin = { path = "./deps/spin" }

[profile.release]
opt-level = 3
lto = true

[features]
default = ["ledger_device_sdk/nano_nbgl"]
debug = ["ledger_device_sdk/debug"]

[package.metadata.ledger]
curve = ["secp256k1"]
flags = "0"
path = ["44'/1'"]
name = "Rust Boilerplate"

[package.metadata.ledger.nanox]
icon = "icons/crab_14x14.gif"

[package.metadata.ledger.nanosplus]
icon = "icons/crab_14x14.gif"

[package.metadata.ledger.stax]
icon = "icons/crab_32x32.gif"

[package.metadata.ledger.flex]
icon = "icons/crab_40x40.gif"

[package.metadata.ledger.apex_p]
icon = "icons/crab_32x32.png"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("apex_p", "stax", "flex", "nanos", "nanox", "nanosplus"))'] }