[package]
name = "app-zcash-rust"
version = "0.0.1"
authors = ["Ledger"]
edition = "2021"

[dependencies]
ledger_device_sdk = "1.*"
ledger_secure_sdk_sys = "1.*"
include_gif = "1.*"
core2 = { version = "0.3.0", default-features = false }
serde = { version="1.0.192", default-features = false, features = ["derive"] }
serde-json-core = { git = "https://github.com/rust-embedded-community/serde-json-core" }
hex = { version = "0.4.3", default-features = false, features = ["serde", "alloc"] }
numtoa = "0.2.4"
arrayvec = { version = "0.7.6", default-features = false}
bs58 = { version="0.5.1", default-features = false }

zcash_primitives = { git = "https://github.com/Fingolfin69/librustzcash.git", branch = "bn-zcash-device-app", default-features = false }
zcash_protocol = { git = "https://github.com/Fingolfin69/librustzcash.git", branch = "bn-zcash-device-app", default-features = false }
zcash_encoding = { git = "https://github.com/Fingolfin69/librustzcash.git", branch = "bn-zcash-device-app", default-features = false }
zcash_transparent = { git = "https://github.com/Fingolfin69/librustzcash.git", branch = "bn-zcash-device-app", default-features = false }

[patch.crates-io]
# Used in orchard
radium = { path = "./vendor/radium" }
# Used in bip32 in librustzcash
secp256k1 = { path = "./vendor/rust-secp256k1" }
# Used in librustzcash
orchard = { path = "./vendor/orchard" }
sapling-crypto = { path = "./vendor/sapling-crypto" }
# Used by multiple deps
spin = { path = "./vendor/spin" }
portable-atomic = { git = "https://github.com/taiki-e/portable-atomic.git", tag = "v1.12.0" }

[build-dependencies]
image = "0.25.7"

[profile.release]
opt-level = 'z'
lto = 'fat'

[features]
default = ["ledger_device_sdk/nano_nbgl", "log_debug"]
log_debug = ["ledger_device_sdk/debug"]

[package.metadata.ledger]
curve = ["secp256k1"]
flags = "0"
path = ["44'/133'"]
name = "Zcash"

[package.metadata.ledger.nanox]
icon = "icons/crab_14x14.gif"

[package.metadata.ledger.nanosplus]
icon = "icons/crab_14x14.gif"

[package.metadata.ledger.stax]
icon = "icons/crab_32x32.gif"

[package.metadata.ledger.flex]
icon = "icons/crab_40x40.gif"

[package.metadata.ledger.apex_p]
icon = "icons/crab_32x32.png"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("apex_p", "stax", "flex", "nanos", "nanox", "nanosplus"))'] }
